<resources>
    <string name="app_name">TaskComplete</string>
    <string name="signIn">Sign In</string>
    <string name="email">Email</string>
    <string name="image_auth_background">image_auth_background</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="signUp">Sign Up</string>
    <string name="username">Username</string>
    <string name="repeat_password">Repeat password</string>
    <string name="logout">Logout</string>
    <string name="add_task">Add task</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_priority">Sort by priority</string>
    <string name="description">Description</string>
    <string name="subtasks">Subtasks</string>
    <string name="new_subtask">New subtask…</string>
    <string name="submit">Submit</string>
    <string name="extra">Extra</string>
    <string name="new_extra">New extra…</string>
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
    <string name="edit_sym">📝</string>
    <string name="locale">Locale</string>
    <string-array name="priority_array">
        <item>No priority</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>