<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SubtaskActivity">

    <LinearLayout
        android:id="@+id/subtaskForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_box"
        android:orientation="vertical"
        android:paddingHorizontal="50dp"
        android:paddingVertical="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/subtaskFormTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="name"
            android:hint="@string/title"
            android:inputType="text" />

        <RelativeLayout
            android:id="@+id/subtask_form"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/subtask_deleteFormButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/shape_button_delete"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:onClick="deleteTask"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/subtask_updateFormButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="end"
                android:background="@drawable/shape_button"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:onClick="updateTask"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>